--- a/index.html
+++ b/index.html
@@ -210,6 +210,12 @@ sleep(5000)</pre>
       <li>Write your own Python <strong>functions</strong> to make your code more efficient.</li>
       <li>Use the micro:bit's buttons to control when things happen.</li>
     </ul>
+    <br>
+    <p>Some code examples are here:</p>
+    <ul>
+      <li><a href="https://raw.githubusercontent.com/ScienceOxford/shadow-theatres/main/examples/two-scenes.py">Basic algorithm</a></li>
+      <li><a href="https://raw.githubusercontent.com/ScienceOxford/shadow-theatres/main/examples/two-scenes-functions.py">Restructured with functions, variables, and buttons</a></li>
+    </ul>
   </div>
 
   <footer class="links">
