--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script defer src="https://pyscript.net/releases/2023.05.1/pyscript.js"></script>
+  <link rel="stylesheet" href="https://pyscript.net/releases/2025.2.3/core.css">
+  <script type="module" src="https://pyscript.net/releases/2025.2.3/core.js"></script>
+  
 </head>
 
 <body>
@@ -108,12 +110,11 @@ white = (100, 100, 100)</pre>
         <input type="text" name="style" id="style" placeholder="a random style..."/>
         <br>
         <br>
-        <button py-click="story()" id="run">Click Here</button>
+        <button id="run">Click Here</button>
         <br>
         <br>
         <h5><div id="output"></div></h5>
-        <py-config src="./pyscript.toml"></py-config>
-        <py-script src="./main.py"></py-script>
+        <script type="mpy" src="./main.py"></script>
       </div>
     <p><strong>Edit the code for this scene of your play.</strong></p>
     <ul>
